--- a/style.css
+++ b/style.css
@@ -1,36 +1,40 @@
 * {
   box-sizing: border-box;
 }
-
-#main{
-  width: 600px;
-  margin: auto;
+body {
+  margin: 0;
+  /*border: solid*/
 }
 
-.btn-div {
-	margin: auto;
-	width: 100px;
-	height: 25px
+#main {
+  position: fixed;
+  border: solid;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.btn-div button {
-	width: 100%;
-	height: 100%;
+#grid{
+  background: #6EE3C0;
 }
 
 .row {
   display: flex;
 }
 
+.row div {
+  width: 15px;
+  height: 15px;
+}
+
 .off {
-  width: 10px;
-  height: 10px;
-  border: 1px solid;
+  border-color: #6EE3C0;
+  /*border: outset 1px*/
 }
 
 .on {
-  background: green;
-  width: 10px;
-  height: 10px;
-  border: solid 1px;
+  background: #AD77E4;
+  border: outset 1px;
+  /*border-radius: 30%;*/
+  /*transition: background-color 0.7s, border-color 0.1s;*/
 }
