--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,42 @@ nav {
   position: fixed;
   background: white;
   z-index: 99;
+  width: 0;
+  -webkit-transition: width 0.5s;
+  -o-transition: width 0.5s;
+  transition: width 0.5s;
   top: 0;
   left: 0;
   height: 100%;
-  width: 250px; }
+  background: #3474BC; }
+  nav.navOn {
+    width: 250px;
+    -webkit-box-shadow: 3px 6px 5px 3px rgba(0, 0, 0, 0.35);
+    box-shadow: 3px 6px 5px 3px rgba(0, 0, 0, 0.35);
+    -webkit-transition: width 0.5s;
+    -o-transition: width 0.5s;
+    transition: width 0.5s; }
+
+#navOnOff {
+  position: fixed;
+  font-size: 45px;
+  padding: 15px;
+  z-index: 100;
+  width: 100px;
+  height: 100px;
+  border: outset 2px;
+  top: 35px;
+  left: 35px;
+  background: none; }
+  #navOnOff:active {
+    border: inset; }
+
+@media screen and (max-width: 450px) {
+  #navOnOff {
+    width: 70px;
+    height: 70px;
+    font-size: 25px;
+    padding: 5px; } }
 
 #main {
   position: fixed;
@@ -20,10 +52,11 @@ nav {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  border: inset; }
 
 #grid {
-  background: #6fe2bf; }
+  background: #6ee3c0; }
 
 .row {
   display: -webkit-box;
