--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
   box-sizing: border-box; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  background-color: #125DB0; }
 
 nav {
   position: fixed;
@@ -52,11 +53,11 @@ nav {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  border: inset; }
+  transform: translate(-50%, -50%); }
 
 #grid {
-  background: #6ee3c0; }
+  background: #6ee3c0;
+  border: inset #0A4586; }
 
 .row {
   display: -webkit-box;
@@ -64,9 +65,8 @@ nav {
   display: -ms-flexbox;
   display: flex; }
 
-.on {
-  border: outset #f2f2f2 1px; }
-
 .row div:active {
   border: inset 4px;
+  border-radius: 25%;
+  background: #49D0A7;
   cursor: pointer; }
