--- a/styles.sass
+++ b/styles.sass
@@ -3,6 +3,7 @@
 
 body
   margin: 0
+  background-color: #125DB0
 
 nav
   position: fixed
@@ -47,10 +48,11 @@ nav
   left: 50%
   top: 50%
   transform: translate(-50%, -50%)
-  border: inset
+  // border: inset
 
 #grid
   background: #6ee3c0
+  border: inset #0A4586
   //hsl(162, 66%, 66%)
 
 .row
@@ -59,7 +61,7 @@ nav
 .off
 
 .on
-  border: outset #f2f2f2 1px
+  // border: outset 1px #f2f2f2
 
 // .row div
 //   width: 19px
@@ -67,4 +69,6 @@ nav
 
 .row div:active
   border: inset 4px
+  border-radius: 25%
+  background: #49D0A7
   cursor: pointer
